--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li class="" onclick="sections1(); showSection('einseng'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#0091CF]'); drinks('STAR/EINSENG ENERGY/EINSENG ENERGY 2.png'); slices('STAR/orange/ice.png'); liquids('STAR/orange/splash-2.png');">
                         <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700 max-w-[90px]" src="STAR\LOGO\genseng-1.png" alt="">
                     </li>
-                    <li class="" onclick="sections1(); showSection('egy'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#832429]'); drinks('STAR/EGYXOS CAN/Egyxos 3.png');">
+                    <li class="" onclick="sections1(); showSection('egy'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#832429]'); drinks('STAR/EGYXOS CAN/Egyxos 3.png');  slices('STAR/orange/ice.png'); liquids('STAR/orange/splash-2.png');">
                         <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="STAR\LOGO\EGY-1-2.png" alt="">
                     </li>
                     <li class="" onclick="sections1(); showSection('boom_cola'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#962124]'); drinks('STAR/منتجات BOOM BOOM CAN/BOOM BOOM COLA 2.png');">
@@ -188,15 +188,15 @@
             </div>
             <div class="image w-[40%] group flex justify-center">
                 <img class="drinkImage w-[40%]  md:w-[20%]  2xl:w-[23%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
-                    src="STAR\EGYXOS CAN\Egyxos 3.png" alt="">
+                    src="STAR/EGYXOS CAN/Egyxos 3.png" alt="">
                 <img class="liquidImage absolute w-0 group-hover:w-[26%] group-hover:md:w-[20%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[2deg] translate-y-[0%] -translate-x-[32%]"
-                    src="STAR\orange\splash-2.png" alt="">
+                    src="STAR/orange/splash-2.png" alt="">
                 <img class="sliceImage absolute w-0 group-hover:w-[26%] group-hover:md:w-[20%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[40%] -translate-x-[24%]"
-                    src="STAR\orange\ice.png" alt="">
+                    src="STAR/orange/ice.png" alt="">
                 <img class="drinkImage absolute w-[4%] md:w-[2%] blur-[1px] rotate-[30deg]  z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[50%] translate-x-[650%]"
-                    src="STAR\EGYXOS CAN\Egyxos 3.png" alt="">
+                    src="STAR/EGYXOS CAN/Egyxos 3.png" alt="">
                 <img class="drinkImage absolute w-[2%] md:w-[1%] blur-[1px] -rotate-[30deg] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[110%] -translate-x-[900%]"
-                    src="STAR\EGYXOS CAN\Egyxos 3.png" alt="">
+                    src="STAR/EGYXOS CAN/Egyxos 3.png" alt="">
             </div>
             <div dir="ltr" class="text text-white w-[20%] m-auto">
                 <img class="logoImage" src="STAR\LOGO\EGY-1.png" alt="">
@@ -582,7 +582,7 @@
                     <div class=" flex justify-center">
                         <div class="group relative w-20" >
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('EGYXOS'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#CE232D]')"
+                                onclick="changeText('EGYXOS'); drinks(this.src); slices('STAR/orange/ice.png'); liquids('STAR/orange/splash-2.png'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#CE232D]')"
                                 src="STAR\EGYXOS CAN\Egyxos 3.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\EGYXOS CAN\Egyxos 3.png" alt="">
@@ -592,7 +592,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('EGYXOS CAN'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#832429]')" src="STAR\EGYXOS CAN\EGYXOS CAN 3.png" alt="">
+                                onclick="changeText('EGYXOS CAN'); drinks(this.src); slices('STAR/orange/ice.png'); liquids('STAR/orange/splash-2.png'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#832429]')" src="STAR\EGYXOS CAN\EGYXOS CAN 3.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\EGYXOS CAN\EGYXOS CAN 3.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
