--- a/index.html
+++ b/index.html
@@ -36,14 +36,41 @@
                     <li class="" onclick="sections1(); showSection('code'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#CE232D]'); drinks('STAR/CODE ROD/CODE ROD 2.png'); slices('STAR/orange/ice.png'); liquids('STAR/orange/splash-2.png');">
                         <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="STAR\LOGO\CODE-2.png" alt="">
                     </li>
+                    <li class="" onclick="sections1(); showSection('code'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#CE232D]'); drinks('STAR/CODE ROD/CODE ROD 2.png'); slices('STAR/orange/ice.png'); liquids('STAR/orange/splash-2.png');">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="STAR\LOGO\BOOM-4-2.png" alt="">
+                    </li>
                     <li class="" onclick="sections1(); showSection('einseng'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#0091CF]'); drinks('STAR/EINSENG ENERGY/EINSENG ENERGY 2.png'); slices('STAR/orange/ice.png'); liquids('STAR/orange/splash-2.png');">
                         <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700 max-w-[90px]" src="STAR\LOGO\genseng-1.png" alt="">
+                    </li>
+                    <li class="" onclick="sections1(); showSection('einseng'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#0091CF]'); drinks('STAR/EINSENG ENERGY/EINSENG ENERGY 2.png'); slices('STAR/orange/ice.png'); liquids('STAR/orange/splash-2.png');">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700 max-w-[90px]" src="STAR/LOGO/6 (1).png" alt="">
+                    </li>
+                    <li class="" onclick="sections1(); showSection('boom_cola'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#962124]'); drinks('STAR/منتجات BOOM BOOM CAN/BOOM BOOM COLA 2.png');  slices('STAR/orange/ice.png'); liquids('STAR/firizbi-in/cola 1.png');">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700 max-w-[90px]" src="STAR\LOGO\boom-3-2.png" alt="">
+                    </li>
+                    <li class="" onclick="sections1(); showSection('boom_cola'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#962124]'); drinks('STAR/منتجات BOOM BOOM CAN/BOOM BOOM COLA 2.png');  slices('STAR/orange/ice.png'); liquids('STAR/firizbi-in/cola 1.png');">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700 max-w-[90px]" src="STAR/LOGO/8.png" alt="">
+                    </li>
+                    <li class="" onclick="sections1(); showSection('boom_cola'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#962124]'); drinks('STAR/منتجات BOOM BOOM CAN/BOOM BOOM COLA 2.png');  slices('STAR/orange/ice.png'); liquids('STAR/firizbi-in/cola 1.png');">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700 max-w-[90px]" src="STAR/LOGO/9.png" alt="">
+                    </li>
+                    <li class="" onclick="sections1(); showSection('boom_cola'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#962124]'); drinks('STAR/منتجات BOOM BOOM CAN/BOOM BOOM COLA 2.png');  slices('STAR/orange/ice.png'); liquids('STAR/firizbi-in/cola 1.png');">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700 max-w-[90px]" src="STAR/LOGO/10 (1).png" alt="">
+                    </li>
+                    <li class="" onclick="sections1(); showSection('boom_cola'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#962124]'); drinks('STAR/منتجات BOOM BOOM CAN/BOOM BOOM COLA 2.png');  slices('STAR/orange/ice.png'); liquids('STAR/firizbi-in/cola 1.png');">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700 max-w-[90px]" src="STAR/LOGO/11.png" alt="">
+                    </li>
+                    <li class="" onclick="sections1(); showSection('boom_cola'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#962124]'); drinks('STAR/منتجات BOOM BOOM CAN/BOOM BOOM COLA 2.png');  slices('STAR/orange/ice.png'); liquids('STAR/firizbi-in/cola 1.png');">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700 max-w-[90px]" src="STAR/LOGO/DUBAI-2.png" alt="">
                     </li>
                     <li class="" onclick="sections1(); showSection('egy'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#832429]'); drinks('STAR/EGYXOS CAN/Egyxos 3.png');  slices('STAR/orange/ice.png'); liquids('STAR/orange/splash-2.png');">
                         <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="STAR\LOGO\EGY-1-2.png" alt="">
                     </li>
                     <li class="" onclick="sections1(); showSection('boom_cola'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#962124]'); drinks('STAR/منتجات BOOM BOOM CAN/BOOM BOOM COLA 2.png');  slices('STAR/orange/ice.png'); liquids('STAR/firizbi-in/cola 1.png');">
-                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700 max-w-[90px]" src="STAR\LOGO\boom-3-2.png" alt="">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700 max-w-[90px]" src="STAR/LOGO/KINGLION-2.png" alt="">
+                    </li>
+                    <li class="" onclick="sections1(); showSection('boom_cola'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#962124]'); drinks('STAR/منتجات BOOM BOOM CAN/BOOM BOOM COLA 2.png');  slices('STAR/orange/ice.png'); liquids('STAR/firizbi-in/cola 1.png');">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700 max-w-[90px]" src="STAR/LOGO/15 (1).png" alt="">
                     </li>
                 </ul>
             </div>
