--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                     src="STAR/منتجات BOOM BOOM/ox (2) 1.png" alt="">
             </div>
             <div dir="ltr" class="text text-white w-[20%] m-auto">
-                <img class="logoImage" src="STAR\LOGO\BOOM-4-1.png" alt="">
+                <img class="logoImage" src="STAR/LOGO/8.png" alt="">
                 <h2 class="fruit-text text-base uppercase">OX</h2>
                 <p class="text-[6px] lg:text-sm lg:mb-3">
                     You might be looking at this Slider Revolution template and wondering how the heck you’re going to
@@ -532,7 +532,7 @@
                     src="STAR/منتجات BOOM BOOM/mm power cola (1).png" alt="">
             </div>
             <div dir="ltr" class="text text-white w-[20%] m-auto">
-                <img class="logoImage" src="STAR/LOGO/10 (1).png" alt="">
+                <img class="logoImage" src="STAR/LOGO/11.png" alt="">
                 <h2 class="fruit-text text-base uppercase">Yoom Yoom</h2>
                 <p class="text-[6px] lg:text-sm lg:mb-3">
                     You might be looking at this Slider Revolution template and wondering how the heck you’re going to
@@ -1029,12 +1029,12 @@
                     <div class=" flex justify-center">
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('OX'); drinks(this.src); slices('STAR/orange/ice.png'); liquids('STAR/orange/splash-2.png');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#0D4E7E]')" src="STAR/منتجات BOOM BOOM/blue (2) 1.png" alt="">
+                                onclick="changeText('Blue'); drinks(this.src); slices('STAR/orange/ice.png'); liquids('STAR/orange/splash-2.png');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#0D4E7E]')" src="STAR/منتجات BOOM BOOM/blue (2) 1.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR/منتجات BOOM BOOM/blue (2) 1.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR/منتجات BOOM BOOM/blue (2) 1.png" alt="">
-                            <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">OX</h2>
+                            <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">Blue</h2>
                         </div>
                     </div>
                 </div>
@@ -1053,7 +1053,7 @@
                                 src="STAR/منتجات BOOM BOOM/yoom yoom (2) 1.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR/منتجات BOOM BOOM/yoom yoom (2) 1.png" alt="">
-                            <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">OX</h2>
+                            <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">Yoom</h2>
                         </div>
                     </div>
                 </div>
