--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('BERRY MIX '); drinks(this.src); fruits('STAR/boom boom/توت كبيرة_25.png'); slices('STAR/boom boom/توت صغير_24.png'); liquids('STAR/firizbi-in/33.png');  boxs('STAR/Cartoons/5_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\BERRY MIX 4.png" alt="">
+                                onclick="changeText('BERRY MIX '); drinks(this.src); fruits('STAR/boom boom/توت كبيرة_25.png'); slices('STAR/firizbi-in/57465.png'); liquids('STAR/firizbi-in/33.png');  boxs('STAR/Cartoons/5_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\BERRY MIX 4.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\BERRY MIX 4.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -779,7 +779,7 @@
                                 src="STAR\FRIZBI\BLUE HAWAI BLUEBERRY 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\BLUE HAWAI BLUEBERRY 5.png" alt="">
-                            <h2 class="group-hover:text-[#D35910] text-white text-[4px] lg:text-[6px] mt-[1px] md:mt-[6px]">BLUEBERRY</h2>
+                            <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">B.BERRY</h2>
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -788,7 +788,7 @@
                                 src="STAR\FRIZBI\STRAWBERRY MIX 8.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\STRAWBERRY MIX 8.png" alt="">
-                            <h2 class="group-hover:text-[#D35910] text-white text-[4px] lg:text-[6px] mt-[1px] md:mt-[6px]">STRAWBERRY</h2>
+                            <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">S.BERRY</h2>
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -801,7 +801,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('LYCHEE MIX'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('STAR/Cartoons/2_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#959080]')" src="STAR\FRIZBI\LYCHEE MIX 30.png" alt="">
+                                onclick="changeText('LYCHEE MIX'); drinks(this.src); fruits('STAR/firizbi-in/7585646.png'); slices('STAR/firizbi-in/8668.png'); liquids('star/orange/orange-juice-splash.svg');  boxs('STAR/Cartoons/2_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#959080]')" src="STAR\FRIZBI\LYCHEE MIX 30.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\LYCHEE MIX 30.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -819,7 +819,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('PASSION & FRUIT'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('STAR/boom boom/12_11zon.png'); liquids('STAR/firizbi-in/8464856+.png');  boxs('STAR/Cartoons/3_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#AC5241]')" src="STAR\FRIZBI\PASSION & FRUIT 3.png" alt="">
+                                onclick="changeText('PASSION & FRUIT'); drinks(this.src); fruits('STAR/firizbi-in/8486468.png'); slices('STAR/boom boom/12_11zon.png'); liquids('STAR/firizbi-in/8464856+.png');  boxs('STAR/Cartoons/3_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#AC5241]')" src="STAR\FRIZBI\PASSION & FRUIT 3.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\PASSION & FRUIT 3.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -833,7 +833,7 @@
                                 src="STAR\FRIZBI\POMEGRANATE MIX 3.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\POMEGRANATE MIX 3.png" alt="">
-                            <h2 class="group-hover:text-[#D35910] text-white text-[4px] lg:text-[6px] mt-[1px] md:mt-[6px]">POMEGRANATE</h2>
+                            <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">P.GRANATE</h2>
                         </div>
                     </div>
                 </div>
