--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('BLUEBERRY'); drinks(this.src); fruits('STAR/boom boom/توت كبيرة_25.png'); slices('STAR/boom boom/توت صغير_24.png'); liquids('STAR/firizbi-in/465.png');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#18346A]')" src="STAR\FRIZBI\BLUE HAWAI BLUEBERRY 5.png" alt="">
+                                onclick="changeText('BLUEBERRY'); drinks(this.src); fruits('STAR/firizbi-in/56465.png'); slices('STAR/firizbi-in/656.png'); liquids('STAR/firizbi-in/465.png');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#18346A]')" src="STAR\FRIZBI\BLUE HAWAI BLUEBERRY 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\BLUE HAWAI BLUEBERRY 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
