--- a/index.html
+++ b/index.html
@@ -893,6 +893,15 @@
                                 src="STAR\EGYXOS CAN\EGYXOS CAN 3.png" alt="">
                             <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">CAN</h2>
                         </div>
+                        <div class="group relative w-20">
+                            <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                                onclick="changeText('EGYXOS CAN'); drinks(this.src); slices('STAR/orange/ice.png'); liquids('STAR/orange/splash-2.png'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#272e66]')" src="STAR/منتجات BOOM BOOM/egyxos1.png" alt="">
+                            <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                                src="STAR/منتجات BOOM BOOM/egyxos1.png" alt="">
+                            <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                                src="STAR/منتجات BOOM BOOM/egyxos1.png" alt="">
+                            <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">CAN</h2>
+                        </div>
                     </div>
                 </div>
             </div>
