--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="image w-[40%] group flex justify-center">
                 <img class="drinkImage w-[40%]  md:w-[20%]  2xl:w-[23%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
                     src="STAR/منتجات BOOM BOOM/orange_n 1.png" alt="">
-                <img class="liquidImage absolute w-0 group-hover:w-[40%] group-hover:md:w-[25%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[30%] md:translate-y-[12%] -translate-x-[15%]"
+                <img class="liquidImage absolute w-0 group-hover:w-[40%] group-hover:md:w-[25%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[30%] md:translate-y-[10%] -translate-x-[15%]"
                     src="STAR/boom boom/سائل_29.png" alt="">
                 <img class="fruitImage absolute z-[8] w-0 group-hover:w-[35%] group-hover:md:w-[18%] translate-y-[37%] -translate-x-[20%] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[9.45deg]"
                     src="star\orange\orange-poster.svg" alt="">
@@ -130,7 +130,7 @@
             <div class="image w-[40%] group flex justify-center">
                 <img class="drinkImage w-[40%]  md:w-[20%]  2xl:w-[23%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
                     src="STAR\FRIZBI\APPLE & GRAPE 5.png" alt="">
-                <img class="liquidImage absolute w-0 group-hover:w-[40%] group-hover:md:w-[25%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[30%] -translate-x-[32%]"
+                <img class="liquidImage absolute w-0 group-hover:w-[40%] group-hover:md:w-[25%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[15%] -translate-x-[32%]"
                     src="STAR/firizbi-in/a-s.png" alt="">
                 <img class="fruitImage absolute z-[8] w-0 group-hover:w-[30%] group-hover:md:w-[16%] translate-y-[37%] -translate-x-[20%] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[9.45deg]"
                     src="STAR/boom boom/تفاح كبير_22.png" alt="">
@@ -946,7 +946,7 @@
         <!-- icons section -->
         <div class="hidden section1 einseng">
             <div class="w-full px-[2.5%]">
-                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb  sm:pr-0 mt-[10%]">
+                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb  sm:pr-0">
                     <div class=" flex justify-center">
                         <div class="group relative w-20" >
                             <img class="relative group-hover:scale-[1] w-[18px]  lg:mr-[30%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -966,7 +966,7 @@
         <!-- icons section -->
         <div class="hidden section1 mint">
             <div class="w-full px-[2.5%]">
-                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb  sm:pr-0 mt-[10%]">
+                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb  sm:pr-0">
                     <div class=" flex justify-center">
                         <div class="group relative w-20" >
                             <img class="relative group-hover:scale-[1] w-[18px]  lg:mr-[30%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
