make frizbi main

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             display: none;  /* Safari and Chrome */
         }
     </style>
-    <section class="font-[Inter] flex flex-col justify-evenly h-screen box-border scroll-smooth relative bodyColor bg-gradient-to-t from-[#0E0E0E] to-[#D35910] sb">
+    <section class="font-[Inter] flex flex-col justify-evenly h-screen box-border scroll-smooth relative bodyColor bg-gradient-to-t from-[#0E0E0E] to-[#ABB200] sb">
         <!-- nav bar -->
         <aside
             class="overflow-x-auto z-10 h-full absolute px-1 md:px-4 flex flex-col justify-between transition duration-300">
@@ -77,7 +77,7 @@
         </aside>
         <!-- nav bar/ -->
         <!-- main section -->
-        <div class="content flex justify-between items-center w-full section1 boom2">
+        <div class="content hidden flex justify-between items-center w-full section1 boom2">
             <div class="w-[20%] relative group m-auto">
                 <img class="boxImage scale-[1.2] w-[80%] relative group-hover:-translate-x-[40%] -translate-x-[50%] translate-y-[50%] group-hover:translate-y-[50%] group-hover:scale-125 origin-bottom-right group-hover:rotate-6 z-[1000] duration-700"
                     src="" alt="">
@@ -118,7 +118,7 @@
         </div>
         <!-- main section/ -->
         <!-- main section -->
-        <div class="content hidden justify-between items-center w-full section1 frizbi">
+        <div class="content flex justify-between items-center w-full section1 frizbi">
             <div class="w-[20%] relative group m-auto">
                 <img class="boxImage scale-[1.2] w-[80%] relative group-hover:-translate-x-[40%] -translate-x-[50%] translate-y-[50%] group-hover:translate-y-[50%] group-hover:scale-125 origin-bottom-right group-hover:rotate-6 z-[1000] duration-700"
                     src="" alt="">
@@ -666,7 +666,7 @@
         </div>
         <!-- main section/ -->
         <!-- icons section -->
-        <div class="section1 boom2">
+        <div class="hidden section1 boom2">
             <div class="w-full px-[2.5%]">
                 <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb">
                     <div class=" flex justify-center">
@@ -749,7 +749,7 @@
         </div>
         <!-- icons section/ -->
         <!-- icons section -->
-        <div class="hidden section1 frizbi">
+        <div class="section1 frizbi">
             <div class="w-full px-[2.5%]">
                 <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb pr-[80%] sm:pr-0">
                     <div class=" flex justify-center">
